<?xml version="1.0"?>
<package format="3">
  <name>base_link_waypoint_publisher</name>
  <version>0.1.0</version>
  <description>Publishes waypoints near base_link to stop near a target frame using TF2.</description>

  <maintainer email="todo@example.com">Local Lidar Planner Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
